# MyNoh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
assets/: sample_mynoh.sqlite3
database/: connection.py  repositories.py  schema.py
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  INSTALLATION.md  USER_GUIDE.md
github/: client.py  repo_detector.py
models/: entities.py
scripts/: build.py  create_sample_db.py  init_db.py  install_startup.py  package_linux.sh  package_macos.sh  package_windows.ps1
services/: backup_service.py  dashboard_service.py  export_service.py  github_monitor.py  knowledge_service.py  notification_service.py  search_service.py
settings/: config.py
tests/: test_database.py  test_services.py
ui/: app.py  components.py  floating_assistant.py  theme.py
utils/: logging_config.py  security.py
